--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-
-
 body {
-    background-image: linear-gradient(to bottom, hsl(0, 100%, 50%), yellow );
+    background-image: linear-gradient(to bottom, hsl(137, 84%, 49%), rgb(39, 15, 77) );
     background-repeat: no-repeat;
     height: 100vh;
   }
